tests/expectations/compiler/function/self_finalize_fail.out
Error [ETYC0372066]: `self.caller` is not a valid operand in an async function call context.
    --> compiler-test:9:21
     |
   9 |     assert_eq(addr, self.caller);
     |                     ^^^^^^^^^^^
